--- a/app/src/main/res/layout/activity_new_especialista.xml
+++ b/app/src/main/res/layout/activity_new_especialista.xml
@@ -26,7 +26,7 @@
                 android:visibility="visible"
                 app:layout_anchor="@+id/include"
                 app:layout_anchorGravity="top|right"
-                app:srcCompat="@drawable/logo1"/>
+                app:srcCompat="@drawable/logoa" />
 
 
         </android.support.v7.widget.Toolbar>
