--- a/app/src/main/res/layout/consulta_list_view.xml
+++ b/app/src/main/res/layout/consulta_list_view.xml
@@ -29,7 +29,7 @@
                 app:layout_anchor="@+id/layout_prin"
                 app:layout_anchorGravity="top|right"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/logo1" />
+                app:srcCompat="@drawable/logoa" />
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
