--- a/app/src/main/res/layout/us_logado.xml
+++ b/app/src/main/res/layout/us_logado.xml
@@ -19,7 +19,7 @@
             android:background="?attr/colorPrimary">
 
             <ImageView
-                app:srcCompat="@drawable/logo1"
+                app:srcCompat="@drawable/logoa"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_gravity="end"
