--- a/app/src/main/res/drawable/bkg_custom.xml
+++ b/app/src/main/res/drawable/bkg_custom.xml
@@ -1,25 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
-        android:shape="rectangle"
-            >
-        <gradient
-            android:startColor="#fff"
-            android:centerColor="#b9efb9"
-            android:endColor="#fff"
-            android:type="radial"
-            android:gradientRadius="360">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <gradient
+        android:startColor="#edfdf1"
+        android:centerColor="#bef7cc"
+        android:endColor="#edfdf1"
+        android:type="radial"
+        android:gradientRadius="460">
 
-        </gradient>
-        <corners
-            android:radius="2dp"
-            />
+    </gradient>
+    <corners android:radius="2dp" />
 
 
-
-
-    </shape>
+</shape>
 
 
 
