--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,54 +11,48 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="116dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="110dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="16dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="10dp"
-        android:elevation="4dp">
+        android:layout_marginTop="8dp"
+     >
+
+        <ImageView
+            android:layout_width="310dp"
+            android:layout_height="30dp"
+            android:layout_gravity="bottom|center"
+            android:contentDescription="@string/laboratorio"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/texto_logo" />
 
         <ImageView
             android:id="@+id/main_logo"
-            android:layout_width="73dp"
-            android:layout_height="67dp"
-            android:layout_gravity="top|center_horizontal"
-            android:scaleType="centerInside"
-            app:srcCompat="@drawable/logo1"
-            android:contentDescription="@string/laboratorio"/>
-
-        <TextView
-            android:layout_width="279dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:elevation="4dp"
-            android:shadowColor="@android:color/darker_gray"
-            android:shadowDx="5"
-            android:shadowDy="10"
-            android:shadowRadius="8"
-            android:text="@string/title_in"
-            android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:textColor="@color/colorSecondaryDark" />
+            android:layout_width="101dp"
+            android:layout_height="80dp"
+            android:layout_gravity="top|center"
+            app:srcCompat="@drawable/logoa" />
 
     </FrameLayout>
 
 
-    <FrameLayout
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp">
+       android:layout_margin="8dp">
 
 
         <GridLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|center_horizontal">
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <ImageButton
                 android:id="@+id/main_woman"
                 style="@android:style/Widget.Material.Light.Button.Borderless"
-                android:layout_width="wrap_content"
+                android:layout_width="110dp"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
                 android:layout_gravity="center"
@@ -68,27 +62,22 @@
 
             <TextView
                 style="@android:style/Widget.DeviceDefault.TextView"
-                android:layout_width="wrap_content"
+                android:layout_width="110dp"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="8dp"
                 android:layout_row="1"
                 android:text="@string/saude_wo"
-                android:textColor="@android:color/black" />
-
-            <ImageButton
-                style="@android:style/Widget.Material.Light.Button.Borderless"
-                android:layout_width="56dp"
-                android:layout_height="56dp"
-                android:layout_column="1"
+                android:textColor="@android:color/black"
                 android:layout_gravity="center"
-                android:layout_row="0" />
+                android:layout_marginBottom="8dp"
+                android:textAlignment="center"/>
+
+
 
             <ImageButton
                 android:id="@+id/main_oldMan"
                 style="@android:style/Widget.Material.Light.Button.Borderless"
-                android:layout_width="96dp"
+                android:layout_width="110dp"
                 android:layout_height="wrap_content"
                 android:layout_column="2"
                 android:layout_gravity="center"
@@ -99,20 +88,21 @@
 
             <TextView
                 style="@android:style/Widget.DeviceDefault.TextView"
-                android:layout_width="wrap_content"
+                android:layout_width="110dp"
                 android:layout_height="wrap_content"
                 android:layout_column="2"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="8dp"
                 android:layout_row="1"
                 android:text="@string/saude_vo"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/black"
+                android:layout_gravity="center"
+                android:layout_marginBottom="8dp"
+                android:textAlignment="center"/>
 
 
             <ImageButton
                 android:id="@+id/main_rute"
                 style="@android:style/Widget.Material.Light.Button.Borderless"
-                android:layout_width="96dp"
+                android:layout_width="110dp"
                 android:layout_height="wrap_content"
                 android:layout_column="2"
                 android:layout_gravity="center"
@@ -123,20 +113,21 @@
 
             <TextView
                 style="@android:style/Widget.DeviceDefault.TextView"
-                android:layout_width="wrap_content"
+                android:layout_width="110dp"
                 android:layout_height="wrap_content"
                 android:layout_column="2"
+                android:layout_row="3"
                 android:layout_gravity="center"
                 android:layout_marginBottom="8dp"
-                android:layout_row="3"
-                android:text="@string/rede"
-                android:textColor="@android:color/black" />
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:text="@string/rede"/>
 
 
             <ImageButton
                 android:id="@+id/main_atPrimaria"
                 style="@android:style/Widget.Material.Light.Button.Borderless"
-                android:layout_width="96dp"
+                android:layout_width="110dp"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
                 android:layout_gravity="center"
@@ -147,19 +138,20 @@
 
             <TextView
                 style="@android:style/Widget.DeviceDefault.TextView"
-                android:layout_width="wrap_content"
+                android:layout_width="110dp"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
-                android:layout_gravity="center"
-                android:layout_marginBottom="8dp"
                 android:layout_row="3"
                 android:text="@string/atPrim"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/black"
+                android:layout_gravity="center"
+                android:layout_marginBottom="8dp"
+                android:textAlignment="center"/>
 
             <ImageButton
                 android:id="@+id/main_suporte"
                 style="@android:style/Widget.Material.Light.Button.Borderless"
-                android:layout_width="96dp"
+                android:layout_width="110dp"
                 android:layout_height="match_parent"
                 android:layout_column="0"
                 android:layout_gravity="center"
@@ -170,19 +162,21 @@
 
             <TextView
                 style="@android:style/Widget.DeviceDefault.TextView"
-                android:layout_width="wrap_content"
+                android:layout_width="110dp"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
-                android:layout_gravity="center"
                 android:layout_row="5"
                 android:text="@string/suporte"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                android:layout_gravity="center"
+                android:layout_marginBottom="8dp"
+                android:textAlignment="center"/>
 
 
             <ImageButton
                 android:id="@+id/main_acessarConta"
                 style="@android:style/Widget.Material.Light.Button.Borderless"
-                android:layout_width="wrap_content"
+                android:layout_width="110dp"
                 android:layout_height="wrap_content"
                 android:layout_column="2"
                 android:layout_gravity="center"
@@ -192,18 +186,46 @@
 
             <TextView
                 style="@android:style/Widget.DeviceDefault.TextView"
-                android:layout_width="wrap_content"
+                android:layout_width="110dp"
                 android:layout_height="wrap_content"
                 android:layout_column="2"
-                android:layout_gravity="center"
                 android:layout_row="5"
                 android:text="@string/acesse"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                android:layout_gravity="center"
+                android:layout_marginBottom="8dp"
+                android:textAlignment="center"/>
 
+            <ImageButton
+                android:layout_width="80dp"
+                android:layout_height="56dp"
+                android:layout_column="1"
+                android:layout_gravity="center"
+                android:layout_row="0"
+                android:background="@color/white"
+                android:backgroundTint="@color/gelo"/>
+
+            <ImageButton
+                android:layout_width="80dp"
+                android:layout_height="56dp"
+                android:layout_column="1"
+                android:layout_gravity="center"
+                android:layout_row="2"
+                android:background="@color/white"
+                android:backgroundTint="@color/gelo" />
+
+            <ImageButton
+                android:layout_width="80dp"
+                android:layout_height="56dp"
+                android:layout_column="1"
+                android:layout_gravity="center"
+                android:layout_row="4"
+                android:background="@color/white"
+                android:backgroundTint="@color/gelo" />
 
         </GridLayout>
 
-    </FrameLayout>
+    </LinearLayout>
 
 
 </LinearLayout>
