--- a/app/src/main/res/layout/app_bar_user_dashboard.xml
+++ b/app/src/main/res/layout/app_bar_user_dashboard.xml
@@ -34,7 +34,7 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                app:srcCompat="@drawable/logo1"
+                app:srcCompat="@drawable/logoa"
                 android:layout_gravity="right"
                 android:layout_margin="8dp"
                 android:visibility="visible"
