--- a/app/src/main/res/layout/content_user_dashboard.xml
+++ b/app/src/main/res/layout/content_user_dashboard.xml
@@ -33,6 +33,7 @@
                 android:layout_column="0"
                 android:layout_margin="8dp"
                 android:layout_row="0"
+                android:backgroundTint="@color/gelo"
                 android:contentDescription="@string/diagn"
                 app:srcCompat="@drawable/diagn4" />
 
@@ -53,6 +54,7 @@
                 android:layout_column="10"
                 android:layout_margin="8dp"
                 android:layout_row="0"
+                android:backgroundTint="@color/gelo"
                 android:contentDescription="@string/new_check"
                 app:srcCompat="@drawable/consult1" />
 
@@ -86,11 +88,12 @@
                 android:id="@+id/userDash_relatorios"
                 android:layout_width="124dp"
                 android:layout_height="124dp"
-                android:layout_margin="8dp"
-                app:srcCompat="@drawable/relatorio1"
-                android:contentDescription="@string/relatorio"
                 android:layout_column="0"
-                android:layout_row="0"/>
+                android:layout_margin="8dp"
+                android:layout_row="0"
+                android:backgroundTint="@color/gelo"
+                android:contentDescription="@string/relatorio"
+                app:srcCompat="@drawable/relatorio1" />
 
             <TextView
                 android:layout_width="124dp"
@@ -106,11 +109,12 @@
                 android:id="@+id/userDash_verArquivo"
                 android:layout_width="124dp"
                 android:layout_height="124dp"
-                app:srcCompat="@drawable/search_icon"
-                android:contentDescription="@string/verArq"
-                android:layout_margin="8dp"
                 android:layout_column="10"
-                android:layout_row="0"/>
+                android:layout_margin="8dp"
+                android:layout_row="0"
+                android:backgroundTint="@color/gelo"
+                android:contentDescription="@string/verArq"
+                app:srcCompat="@drawable/search_icon" />
 
 
             <TextView
