--- a/app/src/main/res/layout/pop_new_user.xml
+++ b/app/src/main/res/layout/pop_new_user.xml
@@ -44,7 +44,7 @@
             android:backgroundTint="@color/white"
             android:elevation="6dp"
             android:text="Agente de Saúde"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorSecondaryDark"
             android:textSize="12sp"
             android:textStyle="bold" />
 
@@ -57,7 +57,7 @@
             android:backgroundTint="@color/white"
             android:elevation="6dp"
             android:text="Especialista"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorSecondaryDark"
             android:textSize="13sp"
             android:textStyle="bold" />
 
