--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,8 +8,8 @@
     <color name="colorSecondary">#2962ff</color>
     <color name="colorSecondaryDark">#0039cb</color>
     <color name="colorSecondaryAccent">#768fff</color>
-    <color name="newBackground">#d6d6d6</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
     <color name="dColorTest">#efeeee</color>
+    <color name="gelo">#f4f1f1</color>
 </resources>
