--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,8 +6,8 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/link</item>
-        <item name="android:windowBackground">@color/newBackground</item>
-        <item name="android:colorBackground">@color/newBackground</item>
+        <item name="android:windowBackground">@color/gelo</item>
+        <item name="android:colorBackground">@color/gelo</item>
     </style>
 
 
