--- a/app/src/main/res/layout/new_agente.xml
+++ b/app/src/main/res/layout/new_agente.xml
@@ -15,7 +15,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-              >
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -25,6 +25,7 @@
 
 
             <EditText
+                android:id="@+id/agentecpf"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
@@ -35,6 +36,7 @@
                 />
 
             <EditText
+                android:id="@+id/agentenome"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -44,11 +46,12 @@
                 android:layout_marginTop="24dp"
                 android:hint="@string/full_name"
                 android:inputType="textPersonName"
-            />
+                />
 
 
 
             <EditText
+                android:id="@+id/agentetelefone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -61,6 +64,7 @@
                 />
 
             <EditText
+                android:id="@+id/agenteemail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -70,7 +74,7 @@
                 android:layout_marginTop="16dp"
                 android:hint="@string/email"
                 android:inputType="textEmailAddress"
-               />
+                />
 
             <Spinner
                 android:id="@+id/newAgente_spProfissao"
@@ -96,6 +100,7 @@
                 style="@android:style/Widget.Material.Light.Spinner.Underlined"/>
 
             <EditText
+                android:id="@+id/agentesenha"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -109,6 +114,7 @@
                 tools:ignore="LabelFor"/>
 
             <EditText
+                android:id="@+id/agenterepitasenha"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -123,6 +129,7 @@
 
 
             <TextView
+                android:id="@+id/agentefoto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
