--- a/app/src/main/res/layout/content_novo_diagnostico.xml
+++ b/app/src/main/res/layout/content_novo_diagnostico.xml
@@ -20,6 +20,7 @@
             android:layout_height="match_parent">
 
             <EditText
+                android:id="@+id/diagnosticoprontuario"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/nu_prontuario"/>
@@ -42,6 +43,7 @@
 
 
             <EditText
+                android:id="@+id/diagnosticotexto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
@@ -92,6 +94,7 @@
             </LinearLayout>
 
             <Button
+                android:id="@+id/diagnosticoenviar"
                 android:layout_marginTop="36dp"
                 android:layout_marginBottom="36dp"
                 android:layout_width="wrap_content"
