--- a/app/src/main/res/layout/new_especialista.xml
+++ b/app/src/main/res/layout/new_especialista.xml
@@ -63,6 +63,7 @@
                 />
 
             <EditText
+                android:id="@+id/especialistaemail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
