--- a/app/src/main/res/layout/activity_atender.xml
+++ b/app/src/main/res/layout/activity_atender.xml
@@ -6,66 +6,108 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.dehcors.teleconsultorapp.AtenderActivity">
-    <LinearLayout
-        android:layout_marginTop="16dp"
-       android:layout_marginLeft="16dp"
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/atendertipoconsulta"
+            android:text="@string/atender_a"
+            android:layout_width="wrap_content"
+            android:minWidth="150dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:textAppearance="@android:style/TextAppearance.Material.Title" />
+
+        <TextView
+            android:id="@+id/atenderidconsulta"
+            android:hint="nº 44787"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:layout_marginEnd="16dp"
+            android:minWidth="100dp" />
+    </LinearLayout>
+
+            <LinearLayout
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginEnd="8dp"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+
+            <TextView
+            android:text="@string/a_espec"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:minWidth="150dp"
+                android:layout_gravity="center"
+                android:textAppearance="@android:style/TextAppearance.Material.Title" />
+
+        <TextView
+            android:id="@+id/atenderespecialidade"
+            android:hint="@string/enf"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="16dp"
+            android:minWidth="100dp"
+            android:gravity="center_vertical" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/atenderduvida"
+        android:padding="2dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="40dp"
+        android:layout_width="wrap_content"
+        android:minWidth="50dp"
+        android:layout_height="wrap_content"
+        android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
+
+    <EditText
+        android:id="@+id/atenderresposta"
+        android:hint="@string/parecer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="2dp"
+        android:gravity="top"
+        android:layout_margin="8dp"
+        android:minHeight="150dp"
+        android:theme="@style/AppTheme"
+        android:background="@color/dColorTest" />
+
+    <Button
+        android:id="@+id/atendersalvar"
+        android:text="@string/bt_enviar_a"
+        android:layout_marginTop="36dp"
+        android:layout_marginBottom="36dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:text="Diagnóstico"
-            android:id="@+id/atendertipoconsulta"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:layout_marginLeft="16dp"
-            android:text="44787"
-            android:id="@+id/atenderidconsulta"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="40dp"
-
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <TextView
-            android:text="Especialildade:"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:layout_marginLeft="16dp"
-            android:text="Enfermagem"
-            android:id="@+id/atenderespecialidade"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
-    <TextView
-        android:paddingLeft="16dp"
-        android:layout_marginTop="40dp"
-        android:id="@+id/atenderduvida"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <EditText
-        android:paddingLeft="16dp"
-        android:layout_marginTop="40dp"
-        android:id="@+id/atenderresposta"
-        android:hint="Deixe aqui seu parecer"
-        android:layout_width="match_parent"
-        android:layout_height="100dp" />
-    <Button
-        android:layout_marginTop="120dp"
-        android:text="Enviar Parecer"
-        android:id="@+id/atendersalvar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_gravity="center"
+        style="@android:style/Widget.Material.Button.Colored"/>
 
 
 
-
-
+</LinearLayout>
+</ScrollView>
 </LinearLayout>
