--- a/app/src/main/res/layout/activity_visualizar_consultas.xml
+++ b/app/src/main/res/layout/activity_visualizar_consultas.xml
@@ -7,6 +7,8 @@
     android:orientation="vertical"
     tools:context="com.example.dehcors.teleconsultorapp.VisualizarConsultasActivity">
 
+
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -94,8 +96,8 @@
                 android:hint="@string/parecer"
                 android:minHeight="150dp"
                 android:padding="2dp"
-                android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
-                android:theme="@style/AppTheme" />
+                android:textAppearance="@android:style/TextAppearance.Material.Widget.EditText"
+                android:visibility="visible" />
 
     <Button
         android:id="@+id/visualizarsalvar"
