--- a/app/src/main/res/layout/activity_visualizar_consultas.xml
+++ b/app/src/main/res/layout/activity_visualizar_consultas.xml
@@ -89,6 +89,7 @@
 
             <TextView
                 android:id="@+id/visualizarresposta"
+                style="@android:style/Widget.DeviceDefault.TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
@@ -97,6 +98,7 @@
                 android:minHeight="150dp"
                 android:padding="2dp"
                 android:textAppearance="@android:style/TextAppearance.Material.Widget.EditText"
+                android:textColor="@color/colorAccent"
                 android:visibility="visible" />
 
     <Button
