--- a/app/src/main/res/layout/activity_visualizar_consultas.xml
+++ b/app/src/main/res/layout/activity_visualizar_consultas.xml
@@ -7,6 +7,10 @@
     android:orientation="vertical"
     tools:context="com.example.dehcors.teleconsultorapp.VisualizarConsultasActivity">
 
+
+
+
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -90,7 +94,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                android:background="@color/dColorTest"
+                android:background="@color/black"
                 android:hint="@string/parecer"
                 android:minHeight="150dp"
                 android:padding="2dp"
